--- a/app/views/papuas/_page_entries_info.html.erb
+++ b/app/views/papuas/_page_entries_info.html.erb
@@ -17,7 +17,7 @@
             <%# end %> 
             <span class="font-semibold text-lg"> <%= papuas.size %> </span>
               results and rest 
-            <span class="font-semibold text-lg"> <%= papuas_other.size %> </span>
+            <span class="font-semibold text-lg"> <%= Papua.all.size - papuas.size %> </span>
               languages in blue rows
           </p>
     </div>
