--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -167,7 +167,7 @@
 <script>
 
   //https://stackoverflow.com/questions/11871253/execute-document-ready-even-if-user-came-to-the-page-by-hitting-the-back-button/48213805
-  new Date().getTime();
+  //new Date().getTime();
   
   //https://stackoverflow.com/questions/3628536/history-back-doesnt-trigger-document-ready
   //https://pretagteam.com/question/pageshow-is-not-received-when-pressing-back-button-on-safari-on-ipad
