--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -17,7 +17,7 @@
 
             <a href="<%= searches_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium nav-btn">Search History</a>
 
-            <a href="<%= phonemes_index_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium nav-btn">Phoneme Search</a>
+            <a href="<%= searches_phoneme_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium nav-btn">Phoneme Search</a>
 
             <a href="<%= whatsnew_index_path %>" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">What's New</a>
 
