phoneme search table

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,11 +1,17 @@
-<!--- First Image -->
 <section class="text-black">
-  <div class="container mx-auto flex px-5 pt-24 items-center justify-center flex-col">
+  <div class="container mx-auto flex px-5 pt-24 items-center justify-center flex-col mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5">
     <div class="text-center lg:w-2/3 w-full">
-      <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium  text-black font-mono">
-      The Database of Papunesian Inventories. </h1>
-      <p class="leading-relaxed mb-8 font-normal">The University of Melbourne.
-      </p>
+      <h5 class="title-font sm:text-4xl text-3xl mb-4 font-medium  text-black font-mono">
+      The Database of Papunesian Inventories </h5>
+      <p class="leading-relaxed mb-8 font-normal">The University of Melbourne.</p>
+
+      <div class=""><p>The Papunesian Phonological Inventory database currently includes inventories for 290 languages and varieties.</p></div>
+      <div class="mt-4"><p>The purpose of this site is to share data regarding the phonological inventories of Papunesian indigenous languages for purposes of linguistic research and education. Phonological inventories of specific languages can be accessed using the map browse function, the advanced search table, or the phoneme search function.</p></div>
+      <p class="mt-4">The site is periodically updated to reflect additions and corrections to the dataset.</p>
+      <p class="mt-4">The dataset and website is currently maintained by 
+        <a href="https://staff.unimelb.edu.au/people?id=815823" class="text-blue-700">Jiatao Wu</a>. The dataset was developed by 
+        <a href="https://findanexpert.unimelb.edu.au/profile/13831-john-hajek" class="text-blue-700"> John Hajek</a> and 
+        <a href="https://staff.unimelb.edu.au/people?id=762796" class="text-blue-700">Timothy Brickell</a></p>
     </div>
   </div>
 </section>
@@ -13,9 +19,11 @@
 <!--- First Image -->
 <section class="">
   <div class="container mx-auto flex px-10 py-8 items-center justify-center flex-col">
-    <img class="lg:w-15/15 md:w-15/5 w-20/6 mb-10 object-cover object-center rounded" alt="hero"
-    src=" https://dummyimage.com/1000x600/edf2f7/0f1631">
+    <!-- <img class="lg:w-15/15 md:w-15/5 w-20/6 mb-10 object-cover object-center rounded" alt="hero"
+    src=" https://dummyimage.com/1000x600/edf2f7/0f1631"> -->
+    
   </div>
+
 </section>
 <!--section class="">
   <div class="container px-5 py-24 mx-auto flex flex-wrap">
@@ -359,7 +367,7 @@
     </p>
     <p class="text-sm text-gray-600 font-bold sm:ml-6 sm:mt-0 mt-4">
       <!--- Github -->
-      <a class="flex items-center mx-2 text-gray-600 hover:text-indigo-600" href="https://github.com/silenceJT" target="_blank">
+      <a class="flex items-center mx-2 text-gray-600 hover:text-indigo-600" href="https://github.com/silenceJT/pm_MongoDB" target="_blank">
         <svg class="h-5 w-5 fill-current" xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'>
           <path d='M256,32C132.3,32,32,134.9,32,261.7c0,101.5,64.2,187.5,153.2,217.9a17.56,17.56,0,0,0,3.8.4c8.3,0,11.5-6.1,11.5-11.4,0-5.5-.2-19.9-.3-39.1a102.4,102.4,0,0,1-22.6,2.7c-43.1,0-52.9-33.5-52.9-33.5-10.2-26.5-24.9-33.6-24.9-33.6-19.5-13.7-.1-14.1,1.4-14.1h.1c22.5,2,34.3,23.8,34.3,23.8,11.2,19.6,26.2,25.1,39.6,25.1a63,63,0,0,0,25.6-6c2-14.8,7.8-24.9,14.2-30.7-49.7-5.8-102-25.5-102-113.5,0-25.1,8.7-45.6,23-61.6-2.3-5.8-10-29.2,2.2-60.8a18.64,18.64,0,0,1,5-.5c8.1,0,26.4,3.1,56.6,24.1a208.21,208.21,0,0,1,112.2,0c30.2-21,48.5-24.1,56.6-24.1a18.64,18.64,0,0,1,5,.5c12.2,31.6,4.5,55,2.2,60.8,14.3,16.1,23,36.6,23,61.6,0,88.2-52.4,107.6-102.3,113.3,8,7.1,15.2,21.1,15.2,42.5,0,30.7-.3,55.5-.3,63,0,5.4,3.1,11.5,11.4,11.5a19.35,19.35,0,0,0,4-.4C415.9,449.2,480,363.1,480,261.7,480,134.9,379.7,32,256,32Z'/>
         </svg>
