--- a/app/assets/stylesheets/searches.scss
+++ b/app/assets/stylesheets/searches.scss
@@ -8,6 +8,7 @@
 	cursor: pointer;
 	border-radius: 5px;
 	padding: 0px 3px 2px 3px;
+	display: inline-block;
 }
 
 #chooser span:hover {
@@ -32,4 +33,8 @@
 #chooser span.no:hover {
 	color: #fff;
 	background-color: #e03;
+}
+
+#chooser td {
+	/*width:200px;*/
 }
