reorder symbols in table and mark some in red

--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,6 +1,14 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
 	<div class="update my-10">
+		<p class="my-2">New in (December 3rd, 2021):</p>
+		<ul class="list-inside list-disc">
+			<li>Reordered symbols inside phoneme search table so every simple sound will show before its other sounds.</li>
+			<li>Colored symbols which are not inside our samples in Red.</li>
+			<li>Moved Reset button at the top of the phoneme search table.</li>
+		</ul>
+	</div>
+	<div class="update my-10">
 		<p class="my-2">New in (November 29th, 2021):</p>
 		<ul class="list-inside list-disc">
 			<li>New page: Phoneme Search allows you to find languages by specifying which phonemes are present in their phonological inventories and/or by specifying phonemes which phonemes are absent from their inventories.</li>
