--- a/app/views/searches/phoneme.html.erb
+++ b/app/views/searches/phoneme.html.erb
@@ -1,5 +1,8 @@
 <%= form_tag papuas_path, :method => 'get', :id => "phonemes_search" do %>
 <div id="chooser" class="mt-5">
+	<div>
+		<span f="-1" class="mb-2 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-28">Reset</span>
+	</div>
 	<div class="align-middle inline-block min-w-full text-sm" id="phonemes_table">
 		<div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
 			<table id="myTable5" class="table-fixed min-w-full divide-y divide-gray-200 font-mono ">
@@ -21,9 +24,6 @@
 				</tbody>
 			</table>
 		</div>
-	</div>
-	<div>
-		<span f="-1" class="mt-2 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-28">Reset</span>
 	</div>
 </div>
 
