--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,7 @@
       <h5 class="title-font sm:text-4xl text-3xl mb-4 font-medium  text-black font-mono">
       The Database of Papunesian Inventories </h5>
       <p class="leading-relaxed mb-8 font-normal">The University of Melbourne.</p>
+      <p class="leading-relaxed mb-8 font-normal">© John Hajek</p>
 
       <div class=""><p>The Papunesian Phonological Inventory database currently includes inventories for 290 languages and varieties.</p></div>
       <div class="mt-4"><p>The purpose of this site is to share data regarding the phonological inventories of Papunesian indigenous languages for purposes of linguistic research and education. Phonological inventories of specific languages can be accessed using the map browse function, the advanced search table, or the phoneme search function.</p></div>
