update map legend, add map to phoneme page

--- a/app/views/papuas/_maps.html.erb
+++ b/app/views/papuas/_maps.html.erb
@@ -7,7 +7,7 @@
     <!-- <div><span style="background-color: #223b53" class="circle"></span>Solomon Islands</div> -->
     <!-- <h4 style="margin-top: 14px ">The Rest</h4> -->
     <!-- <div><span><img class="img" src="/school-JP_PNG.svg"></img></span>PNG</div> -->
-    <div><span><img class="img" src="/school-JP_IND.svg"></img></span>The Rest</div>
+    <div><span><img class="img" src="/school-JP_PNG.svg"></img></span>The Rest</div>
     <!-- <div><span><img class="img" src="/school-JP_Solo.svg"></img></span>Solomon Islands</div> -->
   </div>
 
@@ -190,12 +190,12 @@
 				'match', // Use the 'match' expression: https://docs.mapbox.com/mapbox-gl-js/style-spec/#expressions-match
 				['get', 'ethnicity'], // Use the result 'STORE_TYPE' property
 				'PNG',
-	            '#e55e5e',
+	            '#ffa321',
 	            'IND',
-	            '#e55e5e',
-	            '#e55e5e' // any other store type
+	            '#ffa321',
+	            '#ffa321' // any other store type
 				],
-				'icon-opacity': 0.5
+				'icon-opacity': 1
 			}
 			});
 		});
