--- a/app/views/papuas/index.js.erb
+++ b/app/views/papuas/index.js.erb
@@ -3,3 +3,5 @@ $('#papuas_results').html('<%= escape_javascript(render('papuas', papuas: @papua
 $('#papuas_rest').html('<%= escape_javascript(render('papuas_rest', papuas: @papuas_other)) %>');
 
 $("#page_entries_info").html("<%= escape_javascript(render('page_entries_info', papuas: @papuas, papuas_other: @papuas_other)) %>");
+
+$("#map").html("<%= escape_javascript(render('maps', papuas_results: @papuas, papuas_other: @papuas_other)) %>");
