--- a/app/views/searches/phoneme.html.erb
+++ b/app/views/searches/phoneme.html.erb
@@ -34,7 +34,9 @@
 	<p id="results"></p>
 </div>
 
-
+<div class="map mt-3" id='map' style='width: 100%; height: 600px;'>
+  <%= render 'papuas/maps', papuas_results: @search.papuas, papuas_other: @search.papuas_other %>
+</div>
 
 <div class="mt-3 bg-white py-3 flex items-center justify-between border-t border-gray-200">
     <div id="page_entries_info">
