feat: Restruct database and new design

--- a/app/views/papuas/_form.html.erb
+++ b/app/views/papuas/_form.html.erb
@@ -67,9 +67,16 @@
           <%= form.text_field :inv, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md bg-gray-200 uneditable-input", :disabled => true %>
         </div>
 
-        <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+        <!--div class="col-span-6 sm:col-span-3 lg:col-span-6">
           <%= form.label :consonants, "Consonant", class: "block text-sm font-medium text-gray-700" %>
           <%= form.text_field :consonants, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div-->
+
+        <div class="col-span-6 sm:col-span-3 lg:col-span-6">
+          <%= form.label "Consonant", class: "block text-sm font-medium text-gray-700" %>
+          <%#= select_tag 'segment_ids[]', options_from_collection_for_select(@segments, @papua.segment_ids), { multiple: true, class: "multiselect mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" } %>
+          <%= form.select :segment_ids, @segments, {}, { id: "multiselect", class: "multiselect mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md", multiple: true } %>
+          <%#= form.collection_select :segment_ids, Segment.order(no:1).all, :id, :ipa, {}, { multiple: true, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" } %>
         </div>
 
         <div class="col-span-6 sm:col-span-3 lg:col-span-6">
@@ -140,3 +147,13 @@
     <%= form.submit %>
   </div-->
   <% end %>
+
+<script>
+  $(document).ready(function() {
+    // $('.multiselect').select2();
+    new SlimSelect({
+      select: '#multiselect',
+      closeOnSelect: false
+    })
+  });
+</script>
