--- a/app/views/papuas/index.js.erb
+++ b/app/views/papuas/index.js.erb
@@ -1,4 +1,4 @@
-console.log('index.js works');
+<%# console.log('index.js works'); %>
 $('#papuas_results').html('<%= escape_javascript(render('papuas', papuas: @papuas)) %>');
 $('#papuas_rest').html('<%= escape_javascript(render('papuas_rest', papuas: @papuas_other)) %>');
 
