--- a/app/assets/stylesheets/papuas.scss
+++ b/app/assets/stylesheets/papuas.scss
@@ -26,3 +26,16 @@
 		margin-right: 5px;
 		width: 12px;
 	}
+
+  .ss-value-text {
+    font-weight: bold;
+    font-size: 16px !important;
+  }
+
+  .ss-option {
+    font-weight: bold;
+  }
+
+  .ss-value-delete {
+    margin-left: 20px !important;
+  }
