--- a/app/views/searches/phoneme.html.erb
+++ b/app/views/searches/phoneme.html.erb
@@ -1,7 +1,9 @@
 <%= form_tag papuas_path, :method => 'get', :id => "phonemes_search" do %>
 <div id="chooser" class="mt-5">
 	<div>
-		<span f="-1" class="mb-2 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-28">Reset</span>
+		<span f="-1" class="mb-2 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium 
+    text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 
+    text-center w-28">Reset</span>
 	</div>
 	<div class="align-middle inline-block min-w-full text-sm" id="phonemes_table">
 		<div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
@@ -48,10 +50,10 @@
   
 <div class="text-center px-4 py-6 text-lg text-gray-700 font-medium">
   The rest
-  <span class="font-semibold text-blue-700 text-2xl"> <%= @search.papuas_other.size %> </span>
+  <!--span class="font-semibold text-blue-700 text-2xl"> <%= @search.papuas_other.size %> </span-->
   languages
 </div>
 
-<div id="papuas_rest" class="px-4"><%= render 'papuas/papuas_rest', papuas: @search.papuas_other %></div>
+<div id="papuas_rest" class="px-4 lg:px-10"><%= render 'papuas/papuas_rest', papuas: @search.papuas_other %></div>
 
 <% end %>
