--- a/app/views/segments/index.html.erb
+++ b/app/views/segments/index.html.erb
@@ -4,7 +4,22 @@
 <div class="flex items-center">
   <h1 class="py-2 text-3xl text-gary-900 font-bold">Segments</h1>
 
-  <button id="segReset" onclick="performReset()" class="ml-3 items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-28">Reset</button>
+  <button id="segReset" onclick="performReset()" class="ml-3 items-center px-4 py-2 border border-transparent 
+    rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none 
+    focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 text-center w-28">Reset</button>
+
+  <% if user_signed_in? && current_user.admin? %>
+    <a href="<%= new_segment_path(@segment) %>">
+      <span class="hidden sm:block">
+        <button type="button" class="ml-3 inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+          <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v3m0 0v3m0-3h3m-3 0H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+          </svg>
+          New Segment
+        </button>  
+      </span>
+    </a>
+  <% end %> 
 </div>
 
 <div class="align-middle inline-block min-w-full" id="segments_table">
