--- a/app/views/segments/new.html.erb
+++ b/app/views/segments/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Segment</h1>
+<h1 class="pl-3 mt-5 text-3xl text-gary-900 font-bold">New Segment</h1>
 
 <%= render 'form', segment: @segment %>
-
-<%= link_to 'Back', segments_path %>
