--- a/app/views/papuas/_form.html.erb
+++ b/app/views/papuas/_form.html.erb
@@ -33,6 +33,11 @@
         </div>
 
         <div class="col-span-6 sm:col-span-3">
+          <%= form.label :phylum, "Phylum", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :phylum, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+        </div>
+
+        <div class="col-span-6 sm:col-span-3">
           <%= form.label :iso, "ISO", class: "block text-sm font-medium text-gray-700" %>
           <%= form.text_field :iso, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
         </div>
