--- a/app/views/papuas/_papuas.html.erb
+++ b/app/views/papuas/_papuas.html.erb
@@ -16,6 +16,10 @@
               Language Family
             </th>
 
+            <th scope="col" class="hover:bg-gray-100 cursor-pointer px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              Phylum
+            </th>
+
             <th scope="col" class="hover:bg-gray-100 cursor-pointer px-2 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
               ISO
             </th>
@@ -57,6 +61,9 @@
         </td>
         <td class="px-4 py-4 whitespace-normal">
           <div class="text-sm text-gray-500"><%= papua.language_family %></div>
+        </td>
+        <td class="px-4 py-4 whitespace-normal">
+          <div class="text-sm text-gray-500"><%= papua.phylum %></div>
         </td>
         <td class="px-2 py-4 whitespace-normal">
           <div class="text-sm text-gray-500"><%= papua.iso %></div>
