feat: Change vowels to v_segments and bug fix

--- a/app/views/papuas/_form.html.erb
+++ b/app/views/papuas/_form.html.erb
@@ -85,8 +85,8 @@
         </div>
 
         <div class="col-span-6 sm:col-span-3 lg:col-span-6">
-          <%= form.label :vowels, "Vowel", class: "block text-sm font-medium text-gray-700" %>
-          <%= form.text_field :vowels, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
+          <%= form.label :v_segments, "Vowel", class: "block text-sm font-medium text-gray-700" %>
+          <%= form.text_field :v_segments, class: "mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md" %>
         </div>
 
         <div class="col-span-6 sm:col-span-3 lg:col-span-6">
