--- a/app/views/searches/show.xls.erb
+++ b/app/views/searches/show.xls.erb
@@ -67,7 +67,7 @@ xmlns:html="http://www.w3.org/TR/REC-html40">
       <Cell><Data ss:Type="String"><%= papua.longitude %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.inv %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.consonants %></Data></Cell>
-      <Cell><Data ss:Type="String"><%= papua.vowels %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= papua.v_segments %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.diphthongs %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.source %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.notes %></Data></Cell>
@@ -87,7 +87,7 @@ xmlns:html="http://www.w3.org/TR/REC-html40">
       <Cell><Data ss:Type="String"><%= papua.longitude %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.inv %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.consonants %></Data></Cell>
-      <Cell><Data ss:Type="String"><%= papua.vowels %></Data></Cell>
+      <Cell><Data ss:Type="String"><%= papua.v_segments %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.diphthongs %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.source %></Data></Cell>
       <Cell><Data ss:Type="String"><%= papua.notes %></Data></Cell>
