--- a/app/views/papuas/show.html.erb
+++ b/app/views/papuas/show.html.erb
@@ -144,10 +144,10 @@
 
       <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
         <dt class="text-sm font-medium text-gray-500">
-          Vowels(<%= @papua.vowels.split(",").size %>)
+          Vowels(<%= @papua.v_segments.split(",").size %>)
         </dt>
         <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-          <%= @papua.vowels %>
+          <%= @papua.v_segments %>
         </dd>
       </div>
 
