--- a/app/views/papuas/index.html.erb
+++ b/app/views/papuas/index.html.erb
@@ -119,8 +119,11 @@
             </th>
 
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-              <!-- <input type="text" id="search_inv" name="search_inv" class="focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-80"> -->
-              <%= text_field_tag :inv, params[:inv], placeholder: "Inventory", class: "focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-80"%>
+              <%= text_field_tag :inv, params[:inv], placeholder: "Consonants", class: "focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-48"%>
+            </th>
+
+            <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <%= text_field_tag :vowels, params[:vowels], placeholder: "Vowels", class: "focus:ring-indigo-500 focus:border-indigo-500 block shadow-sm sm:text-sm border-gray-300 rounded-md w-48"%>
             </th>
 
             <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
