feat: Query vowels in table

--- a/app/views/searches/phoneme.html.erb
+++ b/app/views/searches/phoneme.html.erb
@@ -5,7 +5,7 @@
     text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 
     text-center w-28">Reset</span>
 	</div>
-	<div class="align-middle inline-block min-w-full text-sm" id="phonemes_table">
+	<div class="mb-10 align-middle inline-block min-w-full text-sm" id="consonants_table">
 		<div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
 			<table id="myTable5" class="table-fixed min-w-full divide-y divide-gray-200 font-mono ">
 				<tbody class="bg-white divide-y divide-gray-200">
@@ -19,6 +19,28 @@
 						<tr class="divide-x divide-gray-200">
 							<td class="px-2 py-2 whitespace-pre-line"><%= rName %></td>
 							<% for i in 1..Search::COLNAMES.size %>
+								<td class="px-2 py-2 whitespace-pre-line text-base font-sans"></td>
+							<% end %>
+						</tr>
+					<% end %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+  <div class="align-middle inline-block min-w-full text-sm" id="vowels_table">
+		<div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+			<table id="myTable6" class="table-fixed min-w-full divide-y divide-gray-200 font-mono ">
+				<tbody class="bg-white divide-y divide-gray-200">
+					<tr class="divide-x divide-gray-200">
+						<td class="px-2 py-2 whitespace-pre-line">Vowels</td>
+						<% for cName in Search::VOWEL_COLNAMES %>
+							<td class="px-2 py-2 whitespace-pre-line"><%= cName %></td>
+						<% end %>
+					</tr>
+					<% for rName in Search::VOWEL_ROWNAMES %>
+						<tr class="divide-x divide-gray-200">
+							<td class="px-2 py-2 whitespace-pre-line"><%= rName %></td>
+							<% for i in 1..Search::VOWEL_COLNAMES.size %>
 								<td class="px-2 py-2 whitespace-pre-line text-base font-sans"></td>
 							<% end %>
 						</tr>
