fix: Fix bug of reset button

--- a/app/views/searches/phoneme.html.erb
+++ b/app/views/searches/phoneme.html.erb
@@ -27,7 +27,7 @@
 			</table>
 		</div>
 	</div>
-  <div class="align-middle inline-block min-w-full text-sm" id="vowels_table">
+  <div class="mb-10 align-middle inline-block min-w-full text-sm" id="vowels_table">
 		<div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
 			<table id="myTable6" class="table-fixed min-w-full divide-y divide-gray-200 font-mono ">
 				<tbody class="bg-white divide-y divide-gray-200">
