feat: Add whats new

--- a/app/views/whatsnew/index.html.erb
+++ b/app/views/whatsnew/index.html.erb
@@ -1,5 +1,20 @@
 <div class="mx-64 p-10 bg-white shadow overflow-hidden sm:rounded-lg mt-5 font-mono">
 	<h5 class="text-2xl leading-6 font-medium text-gray-900 text-center mb-5">What's New</h5>
+  <div class="update my-10">
+		<p class="my-2">New in (Feb 4th, 2024):</p>
+		<ul class="list-inside list-disc">
+			<li>Added clickable table of vowels in phonemes search page.</li>
+		</ul>
+	</div>
+  <div class="update my-10">
+		<p class="my-2">New in (Jan 19th, 2024):</p>
+		<ul class="list-inside list-disc">
+			<li>Updated the vowels database, removed duplications and change the vowels with the correct characters.</li>
+      <li>Added feature of querying vowels, now it support searching both consonants and vowels at the same time.</li>
+      <li>Updated the view of show page of consonant, vowels in row is clickable.</li>
+      <li>Updated the view of edit page of consonant, vowels can be select and deselect from the dropdown component (same as consonant).</li>
+		</ul>
+	</div>
 	<div class="update my-10">
 		<p class="my-2">New in (December 3rd, 2021):</p>
 		<ul class="list-inside list-disc">
